--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>{{ page.title | default: site.title }}</title>
 
+   <!-- Include your custom CSS -->
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
+
   {% if site.kramdown.math_engine == 'mathjax' %}
   <!-- Polyfill needed for older browsers -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -53,7 +56,8 @@
   </script>
   {% endif %}
 </head>
-<body>
-  {{ content }}
-</body>
+  <body>
+    <div class="main-container">
+    {{ content }}
+  </body>
 </html>
