--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@
 
 /* A simple container class with margins and a max width */
 .main-container {
-  margin: 3rem auto; 
+  margin: 7rem; 
   max-width: 1000px; 
   padding: 2rem;
 }
