--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>{{ page.title | default: site.title }}</title>
 
+    <!-- Include Roboto from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
   <!-- Include your custom CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
 
